--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 					<option value="Eindhoven Centraal">
 					<option value="Amsterdam Centraal">
 					<option value="Ziggo Dome, Amsterdam">
-					<option value="Ahoy Rotterdam, Ahoyweg, Rotterdam">
+					<option value="Ahoy Rotterdam">
 				</datalist>
 
 				<label for="time">Hoe laat?</label>
