--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<link rel="stylesheet" href="css/styles.css">
 	</head>
 	<body>
+		<div>
 		<div class="naar-werk-container">
 			<h1>Naar werk?</h1>
 			<a id="naar-werk" href="/">Ja</a>
@@ -46,6 +47,7 @@
 				<button type="submit">Zoeken</button>
 			</form>
 		</div>
+	</div>
 	</body>
 	<script src="js/main.js"></script>
 </html>
