complete first draft demo

--- a/index.html
+++ b/index.html
@@ -1,20 +1,16 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Mini demo for datepicker</title>
+		<title>Final datepicker demo</title>
 		<link rel="stylesheet" href="css/styles.css">
 	</head>
 	<body>
-		<div>
+		<div class="not-ns">
 			<div class="naar-werk-container">
-				<h1>Naar werk?</h1>
-				<a id="naar-werk" href="/">Ja</a>
-				<button id="niet-naar-werk">Nee</button>
-			</div>
-			<div class="van-werk-container">
-				<h1>Van werk?</h1>
-				<a id="van-werk" href="/">Ja</a>
-				<button id="niet-van-werk">Nee</button>
+				<h1>Naar werk of naar huis?</h1>
+				<a class="work-or-home" id="naar-werk" href="/">Naar werk</a>
+				<a class="work-or-home" id="van-werk" href="/">Naar huis</a>
+				<button id="niet-van-werk">Geen van beide</button>
 			</div>
 			<div class="waar-naar-toe-container">
 				<h1>Waar wil je naar toe?</h1>
