add keyboard inputs to demo

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 				<h1>Naar werk of naar huis?</h1>
 				<a class="work-or-home" id="naar-werk" href="/reis-assistentie/">Naar werk</a>
 				<a class="work-or-home" id="van-werk" href="/reis-assistentie/">Naar huis</a>
-				<button id="niet-van-werk">Geen van beide</button>
+				<!-- <button id="niet-van-werk">Geen van beide</button> -->
 			</div>
 			<div class="waar-naar-toe-container">
 				<h1>Waar wil je naar toe?</h1>
