--- a/reis-assistentie/index.html
+++ b/reis-assistentie/index.html
@@ -64,7 +64,7 @@
 			<main>
 				<ol>
 					<li>
-						<button>
+						<button class="ov-optie">
 							<article>
 								<header>
 									<h3>
@@ -104,7 +104,7 @@
 						</button>
 					</li>
 					<li>
-						<button>
+						<button class="ov-optie">
 							<article>
 								<header>
 									<h3>
@@ -144,7 +144,7 @@
 						</button>
 					</li>
 					<li>
-						<button>
+						<button class="ov-optie">
 							<article>
 								<header>
 									<h3>
@@ -184,7 +184,7 @@
 						</button>
 					</li>
 					<li>
-						<button>
+						<button class="ov-optie">
 							<article>
 								<header>
 									<h3>
@@ -224,7 +224,7 @@
 						</button>
 					</li>
 					<li>
-						<button>
+						<button class="ov-optie">
 							<article>
 								<header>
 									<h3>
@@ -264,7 +264,7 @@
 						</button>
 					</li>
 					<li>
-						<button>
+						<button class="ov-optie">
 							<article>
 								<header>
 									<h3>
@@ -348,5 +348,5 @@
 			</main>
 		</div>
 	</body>
-	<script src="js/main.js"></script>
+	<script src="../js/main.js"></script>
 </html>
