final changes to demo

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<link rel="stylesheet" href="css/styles.css">
 	</head>
 	<body>
+		<div class="metallica-logo"></div>
 		<div class="not-ns">
 			<div class="naar-werk-container">
 				<h1>Naar werk of naar huis?</h1>
