--- a/reis-assistentie/geboekte-reizen.html
+++ b/reis-assistentie/geboekte-reizen.html
@@ -5,6 +5,7 @@
 		<link rel="stylesheet" href="../css/styles.css">
 	</head>
 	<body>
+		<div class="metallica-logo"></div>
 		<div class="geboekte-reizen">
 			<h1>Mijn geboekte reizen</h1>
 			<form id="geboekte-reizen-form" action="#">
@@ -47,7 +48,7 @@
 				</div>
 			</form>
 			<div>
-				<p>Geen geboekte reizen gevonden</p>
+				<div></div>
 			</div>
 		</div>
 	</body>
