--- a/reis-assistentie/index.html
+++ b/reis-assistentie/index.html
@@ -5,6 +5,7 @@
 		<link rel="stylesheet" href="../css/styles.css">
 	</head>
 	<body>
+		<div class="metallica-logo"></div>
 		<div>
 			<section class="reisplanner">
 				<form action="#">
