--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 		<div class="not-ns">
 			<div class="naar-werk-container">
 				<h1>Naar werk of naar huis?</h1>
-				<a class="work-or-home" id="naar-werk" href="/reis-assistentie/">Naar werk</a>
-				<a class="work-or-home" id="van-werk" href="/reis-assistentie/">Naar huis</a>
+				<a class="work-or-home" id="naar-werk">Naar werk</a>
+				<a class="work-or-home" id="van-werk">Naar huis</a>
 				<!-- <button id="niet-van-werk">Geen van beide</button> -->
 			</div>
 			<div class="waar-naar-toe-container">
